--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,9 +35,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
 
   # Core Architecture
-  get_it: ^7.6.0
+  get_it: ^9.2.0
   provider: ^6.1.1
-  go_router: ^15.1.0
+  go_router: ^17.0.1
   onesignal_flutter: ^5.3.5
   equatable: ^2.0.5
   dartz: ^0.10.1
@@ -55,6 +55,8 @@ dependencies:
   shared_preferences: ^2.2.2
   envied: ^1.3.2
   firebase_core: ^4.3.0
+  fluttertoast: ^9.0.0
+  google_maps_flutter: ^2.14.0
 
 dev_dependencies:
   flutter_test:
