--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   firebase_core: ^4.3.0
   fluttertoast: ^9.0.0
   google_maps_flutter: ^2.14.0
+  image_picker: ^1.2.1
 
 dev_dependencies:
   flutter_test:
