--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   fluttertoast: ^9.0.0
   google_maps_flutter: ^2.14.0
   image_picker: ^1.2.1
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
