--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   google_maps_flutter: ^2.14.0
   image_picker: ^1.2.1
   intl: ^0.20.2
+  firebase_crashlytics: ^5.0.6
 
 dev_dependencies:
   flutter_test:
