--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
 
   # Utils
   shared_preferences: ^2.2.2
+  rxdart: ^0.28.0
   envied: ^1.3.2
   firebase_core: ^4.3.0
   fluttertoast: ^9.0.0
